--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,9 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: hoptoit_development
+  database: hoptoit_funding_development
   pool: 5
-  username: hoptoit
-  password:
+
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -46,15 +45,13 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: hoptoit_test
+  database: hoptoit_funding_test
   pool: 5
-  username: hoptoit
-  password:
+
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: hoptoit_production
+  database: hoptoit_funding_production
   pool: 5
-  username: hoptoit
-  password:
+
